--- a/src/main/java/com/abin/lee/algo/leetcode/questions/summary.conf
+++ b/src/main/java/com/abin/lee/algo/leetcode/questions/summary.conf
@@ -1,11 +1,4 @@
 
-
-
-
-
-
-
-
 二叉树算法内容：
 https://labuladong.online/algo/essential-technique/binary-tree-summary/
 动归/DFS/回溯算法都可以看做二叉树问题的扩展，只是它们的关注点不同：
@@ -15,6 +8,14 @@ https://labuladong.online/algo/essential-technique/binary-tree-summary/
 DFS 算法属于遍历的思路，它的关注点在单个「节点」。
 
 动态规划关注整棵「子树」，回溯算法关注节点间的「树枝」，DFS 算法关注单个「节点」。
+
+
+
+动态规划：
+重叠子问题、最优子结构、状态转移方程就是动态规划三要素
+
+
+
 
 
 
