--- a/src/main/java/com/abin/lee/algo/leetcode/summary/dynamic-programming.conf
+++ b/src/main/java/com/abin/lee/algo/leetcode/summary/dynamic-programming.conf
@@ -101,3 +101,28 @@ void slidingWindow(String s) {
 
 
 
+经典动态规划：0-1 背包问题
+https://labuladong.online/algo/dynamic-programming/knapsack1/
+细化上面的框架：
+int[][] dp[N+1][W+1]
+dp[0][..] = 0
+dp[..][0] = 0
+
+for i in [1..N]:
+    for w in [1..W]:
+        dp[i][w] = max(
+            把物品 i 装进背包,
+            不把物品 i 装进背包
+        )
+return dp[N][W]
+
+状态转移方程:
+for i in [1..N]:
+    for w in [1..W]:
+        dp[i][w] = max(
+            dp[i-1][w],
+            dp[i-1][w - wt[i-1]] + val[i-1]
+        )
+return dp[N][W]
+
+
