--- a/src/main/java/com/abin/lee/algo/leetcode/summary/dynamic-programming.conf
+++ b/src/main/java/com/abin/lee/algo/leetcode/summary/dynamic-programming.conf
@@ -102,6 +102,7 @@ void slidingWindow(String s) {
 
 
 经典动态规划：0-1 背包问题
+knapsack1
 https://labuladong.online/algo/dynamic-programming/knapsack1/
 细化上面的框架：
 int[][] dp[N+1][W+1]
